all pages are stilized by css and bootstrap
all pages are stylized by css and bootstrap

all pages are stylized by css and bootstrap

--- a/PartyInvites/Views/Home/HomePage.cshtml
+++ b/PartyInvites/Views/Home/HomePage.cshtml
@@ -3,13 +3,13 @@
 <head>
     <meta content="width=device-width" />
     <title>HomePage</title>
+    <link rel="stylesheet" href=lib/bootstrap/dist/css/bootstrap.css />
 </head>
 <body>
-    <div>
-        <p>We're going to have an exciting party. <br />
-        (TODO: sell it better)
-        </p>
-        <a asp-action="AnswerForm">Answer Now</a>
+    <div class="text-center">
+        <h3>We're going to have an exciting party.</h3>
+        <h4>And you are invited</h4>
+        <a class="btn btn-primary" asp-action="AnswerForm">Answer Now</a>
     </div>
 </body>
 </html>
