--- a/PartyInvites/Views/Home/ListResponses.cshtml
+++ b/PartyInvites/Views/Home/ListResponses.cshtml
@@ -7,10 +7,12 @@
 <head>
     <meta name=”viewport” content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 <body>
+    <div class="panel-body">
     <h2>Here is the list of people attending the party</h2>
-    <table>
+    <table class="table d-sm-table table-striped table-bordered">
         <thead>
             <tr>
                 <th>Name</th>
@@ -29,6 +31,7 @@
             }
         </tbody>
     </table>
+    </div>
 </body>
 </html>
 
