--- a/Store/Views/_ViewImports.cshtml
+++ b/Store/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Store.Models
+@using Store.Models.ViewModels
+@addTagHelper Store.Infrastructure.*, Store
