add styles for all pages
- add a bit stylies using bootstrap

--- a/Store/Views/Product/ShowListProducts.cshtml
+++ b/Store/Views/Product/ShowListProducts.cshtml
@@ -5,11 +5,9 @@
 
 @foreach(var p in Model.Products)
 {
-    <div>
-        <h3>@p.Name</h3>
-        @p.Description
-        <h4>@p.Price.ToString("c")</h4>
-    </div>
+    @await Html.PartialAsync("ProductPartial", p)
 }
-<div page-model="@Model.PagingInfo" page-action="ShowListProducts"></div>
+<div page-model="@Model.PagingInfo" page-action="ShowListProducts" page-classes-enabled="true"
+page-class="btn" page-class-normal="btn-secondary" page-class-selected="btn-primary" class="btn-group pull-right m-1">
+</div>
 
