--- a/Store/Views/Shared/_Layout.cshtml
+++ b/Store/Views/Shared/_Layout.cshtml
@@ -1,12 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>Store</title>
-    </head>
-    <body>
-        <div>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" asp-href-include="/lib/bootstrap/dist/**/*.min.css"
+          asp-href-exclude="**/*-reboot*,**/*-grid*" />
+    <title>Store</title>
+</head>
+<body>
+    <div class="navbar navbar-dark bg-dark" role="navigation">
+        <a class="navbar-brand mb-0 h1" href="/">STORE</a>
+    </div>
+   <div class="row m-1 p-1">
+        <div id="categories" class="col-3">
+            TODO: smth useful will be here later
+        </div>
+        <div class="col-9">
             @RenderBody()
         </div>
-    </body>
+    </div>
+</body>
 </html>
