add nav menu and tests fot it

--- a/Store/Views/Product/ShowListProducts.cshtml
+++ b/Store/Views/Product/ShowListProducts.cshtml
@@ -8,6 +8,7 @@
     @await Html.PartialAsync("ProductPartial", p)
 }
 <div page-model="@Model.PagingInfo" page-action="ShowListProducts" page-classes-enabled="true"
-page-class="btn" page-class-normal="btn-secondary" page-class-selected="btn-primary" class="btn-group pull-right m-1">
+page-class="btn" page-class-normal="btn-secondary" page-class-selected="btn-primary" page-url-categoty="@Model.CurrentCategory"
+class="btn-group pull-right m-1">
 </div>
 
