--- a/Store/Views/_ViewImports.cshtml
+++ b/Store/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Store.Models
 @using Store.Models.ViewModels
+@using Store.Infrastructure
 @addTagHelper Store.Infrastructure.*, Store
