--- a/Store/Views/Shared/_Layout.cshtml
+++ b/Store/Views/Shared/_Layout.cshtml
@@ -4,13 +4,19 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" asp-href-include="/lib/bootstrap/dist/**/*.min.css"
           asp-href-exclude="**/*-reboot*,**/*-grid*" />
+    <link rel="stylesheet" asp-href-include="lib/font-awesome/css/*.css" />
     <title>Store</title>
 </head>
 <body>
     <div class="navbar navbar-dark bg-dark" role="navigation">
-        <a class="navbar-brand mb-0 h1" href="/">STORE</a>
+        <div class="row">
+            <a class="col navbar-brand" href="/">STORE</a>
+        </div>
+        <div class="" style="margin: 0 10px 0 0" >
+                @await Component.InvokeAsync("CartSummary")
+            </div>
     </div>
-   <div class="row m-1 p-1">
+    <div class="row m-1 p-1">
         <div id="categories" class="col-3">
             @await Component.InvokeAsync("NavMenu")
         </div>
