--- a/Store/Views/Shared/_AdminLayout.cshtml
+++ b/Store/Views/Shared/_AdminLayout.cshtml
@@ -4,9 +4,20 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />
     <title>@ViewBag.Title</title>
+    <style>
+        .input-validation-error{border-coloe: red; background-color: #fee}
+    </style>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
 </head>
 <body class="m-l p-l">
     <div class="bg-infо p-2"><h4>@ViewBag.Title</h4></div>
+    @if(TempData["message"] != null)
+    {
+        <div class="alert alert-success">@TempData["message"]</div>
+    }
     @RenderBody()
 </body>
 </html>
