--- a/Store/Views/Shared/_AdminLayout.cshtml
+++ b/Store/Views/Shared/_AdminLayout.cshtml
@@ -5,28 +5,34 @@
     <link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />
     <title>@ViewBag.Title</title>
     <style>
-        .input-validation-error{border-color: red; background-color: #fee}
+        .input-validation-error {
+            border-color: red;
+            background-color: #fee
+        }
     </style>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+    @*переопределение функции валидации в jquery.validate.js для корректной валидации цены типа decimal
+        взято отсюда https://stackoverflow.com/questions/30449026/the-field-must-be-a-number*@
     <script>
 
-    $.validator.methods.range = function (value, element, param) {
-        var globalizedValue = value.replace(",", ".");
-        return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
-    }
+        $.validator.methods.range = function (value, element, param) {
+            var globalizedValue = value.replace(",", ".");
+            return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
+        }
 
-    $.validator.methods.number = function (value, element) {
-        return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
-    }
-    
-</script>
+        $.validator.methods.number = function (value, element) {
+            return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+        }
+
+    </script>
 
 </head>
 <body class="m-l p-l">
     <div class="bg-infо p-2"><h4>@ViewBag.Title</h4></div>
-    @if(TempData["message"] != null)
+    @if (TempData["message"] != null)
     {
         <div class="alert alert-success">@TempData["message"]</div>
     }
