--- a/Store/Views/Shared/_AdminLayout.cshtml
+++ b/Store/Views/Shared/_AdminLayout.cshtml
@@ -30,8 +30,15 @@
     </script>
 
 </head>
-<body class="m-l p-l">
-    <div class="bg-infо p-2"><h4>@ViewBag.Title</h4></div>
+<body class="m-1 p-1">
+    <div class="bg-infо p-2 row">
+        <div class="col">
+            <h4>@ViewBag.Title</h4>
+        </div>
+        <div class="col-2">
+            <a class="btn btn-sm btn-primary" asp-action=Logout asp-controller=Account>Log Out</a>
+        </div>
+    </div>
     @if (TempData["message"] != null)
     {
         <div class="alert alert-success">@TempData["message"]</div>
