--- a/Store/Views/Admin/Index.cshtml
+++ b/Store/Views/Admin/Index.cshtml
@@ -10,7 +10,7 @@
         <th class="text-right">ID</th>
         <th>Name</th>
         <th class="text-right">Price</th>
-        <th class="text-center">Amount</th>
+        <th class="text-center">Actions</th>
     </tr>
     @foreach (var item in Model)
     {
@@ -18,7 +18,7 @@
             <td class="text-right">@item.ProductID</td>
             <td>@item.Name</td>
             <td class="text-right">@item.Price.ToString("c")</td>
-            <td class="text-right">
+            <td class="text-center">
                 <form asp-action="Delete" method="post">
                     <a asp-action="Edit" class="btn btn-sm btn-warning" asp-route-productId="@item.ProductID">
                         Edit
@@ -33,5 +33,7 @@
     }
 </table>
 <div class="text-center">
+    <a asp-action="ShowListOrder" asp-controller="Order" class="btn btn-primary">Show order list</a>
     <a asp-action="Create" class="btn btn-primary">Add Product</a>
 </div>
+
