--- a/Store/Views/Shared/ProductPartial.cshtml
+++ b/Store/Views/Shared/ProductPartial.cshtml
@@ -14,7 +14,7 @@
         <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()"/>
         <span class="card-text p-1">
             @Model.Description
-            <button type="submit" class="btn btn-success btn-sm pull-right" style="float:right">
+            <button type="submit" class="btn btn-success btn-sm pull-right col-auto" >
                 Add to cart
             </button>
         </span>
